--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 
 # Allow all origins (for development only)
-spring.web.cors.allowed-origins=http://localhost:5173,https://note-frontent.vercel.app
+spring.web.cors.allowed-origins=https://note-frontent.vercel.app
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 
 server.port=${PORT:8080}
